# OuroboBackup

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  config.example.toml
.github/: CODEOWNERS
crates/ourobo-cli/: Cargo.toml
crates/ourobo-cli/src/: main.rs
crates/ourobo-core/: Cargo.toml
crates/ourobo-core/src/: config.rs  engine.rs  error.rs  lib.rs  watcher.rs
crates/ourobo-core/src/backend/: local.rs  mod.rs
crates/ourobo-core/src/ipc/: client.rs  mod.rs  server.rs
crates/ourobo-core/src/strategy/: copy_on_change.rs  mod.rs
crates/ourobo-daemon/: Cargo.toml
crates/ourobo-daemon/src/: daemon.rs  main.rs
crates/ourobo-gui/: Cargo.toml
crates/ourobo-gui/src/: app.rs  main.rs
crates/ourobo-tray/: Cargo.toml
crates/ourobo-tray/src/: main.rs
scripts/: build-dmg.sh
tools/: generate_icon.py
