[workspace]
resolver = "2"
members = [
    "crates/ourobo-core",
    "crates/ourobo-daemon",
    "crates/ourobo-cli",
    "crates/ourobo-gui",
    "crates/ourobo-tray",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
ourobo-core = { path = "crates/ourobo-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
clap = { version = "4", features = ["derive", "env"] }
eframe = "0.29"
egui = "0.29"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
globset = "0.4"
async-trait = "0.1"
tray-icon = "0.19"
muda = "0.15"
tao = "0.33"
rfd = "0.15"
tempfile = "3"
mockall = "0.13"
