[package]
name = "ourobo-gui"
version.workspace = true
edition.workspace = true

[package.metadata.bundle]
name = "OuroboBackup"
identifier = "org.sgnn7.ourobobackup"
category = "public.app-category.utilities"
short_description = "File backup tool"
osx_minimum_system_version = "10.15"

[dependencies]
ourobo-core = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
